Hide image behind Features section --> Fixes #34, Fixes #35

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ h3 {
 }
 
 .container-fluid {
-  padding: 3% 15%;
+  padding: 3% 15% 7%;
 }
 
 /* Navigation Bar */
@@ -59,8 +59,11 @@ h3 {
 /* Title img */
 
 .title-img {
-  width: 60%;
+  /* BUG: #35 image is too large for page */
+  width: 20%;
   transform: rotate(25deg); /* Equal to rotateZ(45deg) */
+  position: absolute;
+  right: 22%;
 }
 
 /* Features Section */
@@ -68,6 +71,8 @@ h3 {
 #features {
   /* margin-top: 2.5rem; */
   padding: 7% 15%;
+  background-color: white;
+  position: relative;
 }
 
 .feature-box {
